# fshstk

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  Doxyfile  README.md
.github/workflows/: build.yml  ci.yml  clang-format.yml  sync-docs.yml
assets/: CMakeLists.txt
assets/backgrounds/: CMakeLists.txt
assets/fonts/: CMakeLists.txt  OFL.txt
cmake/: AddPlugin.cmake  Dependencies.cmake  GitCommitHash.cmake
fonts/: CMakeLists.txt
roboto/: CMakeLists.txt
src/: AmbisonicEncoder.cpp  AmbisonicEncoder.h  CMakeLists.txt  IEM_LaF.h  Main.cpp  PluginBase.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  PluginStateBase.h  StereoPluginBase.h  StereoToAmbiPluginBase.h
src/common/: CMakeLists.txt  PluginBase.h  PluginStateBase.cpp  PluginStateBase.h
src/common/fx/: AmbisonicEncoder.cpp  AmbisonicEncoder.h  CMakeLists.txt  Distortion.cpp  Distortion.h  FDNReverb.cpp  FDNReverb.h  FeedbackDelayNetwork.cpp  FeedbackDelayNetwork.h  MoogVCF.cpp  MoogVCF.h
src/common/gui/: Backgrounds.cpp  Backgrounds.h  CMakeLists.txt  Colors.h  Fonts.cpp  Fonts.h  GuiGlobals.cpp  Sizes.h  guiGlobals.cpp  guiGlobals.h  pathFromText.cpp  pathFromText.h  pointToFloat.h
src/common/gui/components/: BoxedKnob.cpp  BoxedKnob.h  CMakeLists.txt  ComponentPanel.cpp  ComponentPanel.h  InfoButton.cpp  InfoButton.h  Knob.cpp  Knob.h  KnobWithLabel.cpp  KnobWithLabel.h  Labeled.h  OptionButton.cpp  OptionButton.h  OptionPicker.cpp  OptionPicker.h  OrderKnob.cpp  OrderKnob.h  PanelFX.cpp  PanelFX.h  SimpleKnob.cpp  SimpleKnob.h  Switch.cpp  Switch.h  Trigger.cpp  Trigger.h
src/common/plugin/: CMakeLists.txt  ParamBool.h  ParamChoice.h  ParamFloat.h  ParamInt.h  PluginBase.h  PluginStateBase.cpp  PluginStateBase.h  Processor.h  StateManager.cpp  StateManager.h
src/common/pluginbase/: ChoiceParam.h  FloatParam.h  ParamBool.h  ParamChoice.h  ParamFloat.h  ParamInt.h  PluginBase.h  PluginStateBase.h
src/common/synth/: ADSR.cpp  ADSR.h  CMakeLists.txt  MidiEvent.cpp  MidiEvent.h  Oscillator.cpp  Oscillator.h  Synth.cpp  Synth.h  Voice.cpp  Voice.h
src/common/synth/jx11/: ADSR.cpp  ADSR.h  CMakeLists.txt  MidiEvent.cpp  MidiEvent.h  Oscillator.cpp  Oscillator.h  Synth.cpp  Synth.h  Voice.cpp  Voice.h
src/common/synth/wavetable/: CMakeLists.txt  WavetableSound.cpp  WavetableSound.h  WavetableSynth.cpp  WavetableSynth.h  WavetableVoice.cpp  WavetableVoice.h
src/common/util/: BoundedValue.h  BufferProtector.cpp  BufferProtector.h  CMakeLists.txt  EnvelopeFollower.cpp  EnvelopeFollower.h  IndexedVector.cpp  IndexedVector.h  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalVector.h
src/common/utils/: BoundedValue.h  CMakeLists.txt  EnvelopeFollower.cpp  EnvelopeFollower.h  FeedbackDelayNetwork.cpp  FeedbackDelayNetwork.h  IndexedVector.cpp  IndexedVector.h  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalVector.h
src/common/wavetable/: CMakeLists.txt  WavetableSound.cpp  WavetableSound.h  WavetableSynth.cpp  WavetableSynth.h  WavetableVoice.cpp  WavetableVoice.h
src/components/: ReverseSlider.h  SimpleLabel.h  SpherePanner.h  TitleBar.h  TitleBarPaths.h
src/gui/: CMakeLists.txt  GuiGlobals.cpp  GuiGlobals.h  PathFromText.cpp  PathFromText.h  PointToFloat.h
src/gui/components/: CMakeLists.txt  InfoButton.cpp  InfoButton.h  OrderKnob.cpp  OrderKnob.h  SimpleKnob.cpp  SimpleKnob.h
src/gui/sections/: Bottom.cpp  Bottom.h  CMakeLists.txt  MIddle.h  MidBottom.h  MidTop.h  Middle.cpp  Top.cpp  Top.h
src/plugins/: CMakeLists.txt
src/plugins/ambisonium/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h  PluginState.cpp  PluginState.h
src/plugins/encoder/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  main.cpp
src/plugins/encoder/sections/: Bottom.cpp  Bottom.h  CMakeLists.txt  Middle.cpp  Middle.h  Top.cpp  Top.h
src/plugins/fishcoder/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h
src/plugins/fishcoder/gui/: CMakeLists.txt
src/plugins/fishcoder/gui/components/: CMakeLists.txt  OrderKnob.h
src/plugins/fishcoder/gui/sections/: CMakeLists.txt
src/plugins/fishcoder/sections/: Bottom.cpp  Bottom.h  CMakeLists.txt  Middle.cpp  Middle.h  Top.cpp  Top.h
src/plugins/fishsizer/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  main.cpp
src/plugins/fishsizer/wavetable/: WavetableSound.cpp  WavetableSound.h  WavetableSynth.cpp  WavetableSynth.h  WavetableVoice.cpp  WavetableVoice.h
src/plugins/jx11/: CMakeLists.txt  MidiEvent.cpp  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  Synth.cpp  Synth.h  Voice.cpp  Voice.h  WhiteNoise.cpp  WhiteNoise.h
src/plugins/synth1/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h
src/utils/: AmbisonicTools.cpp  AudioProcessorBase.h  CMakeLists.txt  Conversions.h  EnvelopeFollower.h  IEM_LaF.h  IOHelper.cpp  IOHelper.h  OSCInputStream.h  OSCParameterInterface.cpp  OSCParameterInterface.h  OSCUtilities.h  Quaternion.cpp  Quaternion.h  SphericalCartesian.h  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalVector.cpp  SphericalVector.h  YawPitchRoll.cpp  YawPitchRoll.h  ambisonicTools.h  efficientSHvanilla.cpp  efficientSHvanilla.h  n3d2sn3d.h
test/: CMakeLists.txt  DemoTestCase.cpp  QuaternionTest.cpp  SphericalHarmonicsTest.cpp  SphericalVectorTest.cpp  YawPitchRollTest.cpp
