####################################################################################################
#                ██████          █████                              █████    █████                 #
#               ███░░███        ░░███                              ░░███    ░░███                  #
#              ░███ ░░░   █████  ░███████      ██    ██     █████  ███████   ░███ █████            #
#             ███████    ███░░   ░███░░███    ░░    ░░     ███░░  ░░░███░    ░███░░███             #
#            ░░░███░    ░░█████  ░███ ░███                ░░█████   ░███     ░██████░              #
#              ░███      ░░░░███ ░███ ░███                 ░░░░███  ░███ ███ ░███░░███             #
#              █████     ██████  ████ █████    ██    ██    ██████   ░░█████  ████ █████            #
#            ░░░░░     ░░░░░░  ░░░░ ░░░░░    ░░    ░░    ░░░░░░     ░░░░░  ░░░░ ░░░░░              #
#                                                                                                  #
#           fantastic  spatial  holophonic               synthesis    tool    kit                  #
#                                                                                                  #
#                                   copyright (c) fabian hummel                                    #
#                                      www.github.com/fshstk                                       #
#                                          www.fshstk.com                                          #
#                                                                                                  #
#        this file is part of the fantastic spatial holophonic synthesis toolkit (fsh::stk)        #
# fsh::stk is free software: it is provided under the terms of the gnu general public license v3.0 #
#                                   www.gnu.org/licenses/gpl-3.0                                   #
####################################################################################################

set(FSH_MANUFACTURER_CODE Fstk)
set(FSH_PLUGIN_FORMATS VST Standalone)

set_directory_properties(PROPERTIES
  JUCE_COMPANY_NAME               fshstk
  JUCE_COMPANY_WEBSITE            https://docs.fshstk.com
)

# Development is done on macOS, for now we don't really care about other OSes:
if(APPLE)
set_directory_properties(PROPERTIES
  JUCE_COPY_PLUGIN_AFTER_BUILD    TRUE
  JUCE_VST_COPY_DIR               "$ENV{HOME}/Library/Audio/Plug-Ins/VST/fshstk"
)
endif()

add_subdirectory(encoder)
add_subdirectory(synth1)
add_subdirectory(jx11)
