####################################################################################################
#                ██████          █████                              █████    █████                 #
#               ███░░███        ░░███                              ░░███    ░░███                  #
#              ░███ ░░░   █████  ░███████      ██    ██     █████  ███████   ░███ █████            #
#             ███████    ███░░   ░███░░███    ░░    ░░     ███░░  ░░░███░    ░███░░███             #
#            ░░░███░    ░░█████  ░███ ░███                ░░█████   ░███     ░██████░              #
#              ░███      ░░░░███ ░███ ░███                 ░░░░███  ░███ ███ ░███░░███             #
#              █████     ██████  ████ █████    ██    ██    ██████   ░░█████  ████ █████            #
#            ░░░░░     ░░░░░░  ░░░░ ░░░░░    ░░    ░░    ░░░░░░     ░░░░░  ░░░░ ░░░░░              #
#                                                                                                  #
#           fantastic  spatial  holophonic               synthesis    tool    kit                  #
#                                                                                                  #
#                                   copyright (c) fabian hummel                                    #
#                                      www.github.com/fshstk                                       #
#                                          www.fshstk.com                                          #
#                                                                                                  #
#        this file is part of the fantastic spatial holophonic synthesis toolkit (fsh::stk)        #
# fsh::stk is free software: it is provided under the terms of the gnu general public license v3.0 #
#                                   www.gnu.org/licenses/gpl-3.0                                   #
####################################################################################################

# Development is done on macOS, for now we don't really care about other OSes:
if(APPLE)
set_directory_properties(PROPERTIES
  JUCE_COPY_PLUGIN_AFTER_BUILD    TRUE
  JUCE_LV2_COPY_DIR               "$ENV{HOME}/Library/Audio/Plug-Ins/LV2"
  JUCE_VST_COPY_DIR               "$ENV{HOME}/Library/Audio/Plug-Ins/VST/fshstk"
  JUCE_VST3_COPY_DIR              "$ENV{HOME}/Library/Audio/Plug-Ins/VST3/fshstk"
)
endif()

add_subdirectory(encoder)
add_subdirectory(jx11)
